Set a background-color on the header for before the image loads.

--- a/misc.css
+++ b/misc.css
@@ -1,5 +1,9 @@
 /* Theme overrides. */
 
+.site-header {
+  background-color: #7592be;
+}
+
 .title-area {
   text-shadow: #1f1f1f 0px 0px 0.2rem;
 }
